fix alignment

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body{
     justify-content: center;
     height: 100vh;
     background-color: rgb(98,81,64);
+    flex-direction: column;
 }
 
 a{
@@ -47,7 +48,7 @@ a{
 #buttonArea{
     margin-top: 2em;
     color: rgb(235, 206, 46);
-    width: 800px;
+    width: 600px;
     height: 100px;
     display:flex;
     justify-content: space-between;
